[package]
name = "wg-toolkit"
version = "0.1.2"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2021"
license = "GPL-3.0"
description = "Toolkit for various binary and text formats distributed by Wargaming.net (BigWorld, Core engine)."
categories = ["games", "parsing", "data-structures"]
homepage = "https://github.com/mindstorm38/wg-toolkit-rs"
repository = "https://github.com/mindstorm38/wg-toolkit-rs"

[dependencies]
byteorder = "1.4.3"
xmltree = "0.10.3"
base64 = "0.13.0"
rsa = "0.5.0"
rand = "0.8.5"

[lib]
name = "wgtk"
