[package]
name = "wg-toolkit-cli"
description = "Command line utility for interacting with codecs distributed by Wargaming.net"
categories = ["games", "parsing", "data-structures", "command-line-utilities"]
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wg-toolkit.workspace = true

clap = { version = "4.5", features = ["derive", "wrap_help"] }

thiserror = "1.0"
indexmap = "2.6"
glam = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

blowfish = "0.9"
flate2 = "1.0.34"  # For 
rsa = "0.8"

[features]
default = ["bootstrap", "wot"]
bootstrap = []
wot = []

[[bin]]
name = "wgtk"
path = "src/main.rs"
