[package]
name = "wg-toolkit-cli"
description = "Command line utility for interacting with codecs distributed by Wargaming.net"
categories = ["games", "parsing", "data-structures", "command-line-utilities"]
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wg-toolkit.workspace = true

thiserror.workspace = true
indexmap.workspace = true
glam.workspace = true
tracing.workspace = true

blowfish.workspace = true
rsa.workspace = true
crc32fast.workspace = true

flate2.workspace = true

serde.workspace = true
serde-pickle.workspace = true

clap = { version = "4.5", features = ["derive", "wrap_help"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dokan = { version = "0.3.1", optional = true }
dokan-sys = { version = "0.3.1", optional = true }
winapi = { version = "0.3.9", optional = true }
widestring = { version = "0.4.3", optional = true }

[features]
default = ["bootstrap", "wot", "dokan"]
bootstrap = []
wot = []
dokan = ["dep:dokan", "dep:dokan-sys", "dep:winapi", "dep:widestring"]

[[bin]]
name = "wgtk"
path = "src/main.rs"
