[package]
name = "wg-toolkit"
version = "0.4.1"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2021"
license = "MIT"
description = "Toolkit for various binary and text formats distributed by Wargaming.net (BigWorld, Core engine)."
categories = ["games", "parsing", "data-structures"]
homepage = "https://github.com/mindstorm38/wg-toolkit-rs"
repository = "https://github.com/mindstorm38/wg-toolkit-rs"
readme = "../README.md"

[dependencies]
thiserror = "1.0"       # User for defining custom error types.
byteorder = "1.4"       # Used for codecs read/writing.
smallvec = "1.10"       # Used by pxml codec.
base64 = "0.13"         # Used by pxml codec.
glam = "0.21"           # Used for math vec types.
indexmap = "2.2"        # Used for res filesystem.

# Used for codecs read/writing.
serde = "1.0"
serde-pickle = "1.0"

# The following dependencies are used for network sub module.
mio = { version = "0.8", features = ["net", "os-poll"] }
crypto-common = "0.1"
blowfish = "0.9"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
rsa = "0.8"

[features]
default = []

[lib]
name = "wgtk"
