[package]
name = "wg-toolkit"
description = "Toolkit for various binary and text formats distributed by Wargaming.net (BigWorld, Core engine)."
categories = ["games", "parsing", "data-structures"]
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
thiserror = "1.0"       # User for defining custom error types.
byteorder = "1.5"       # Used for codecs read/writing.
smallvec = "1.13"       # Used by pxml codec.
base64 = "0.22"         # Used by pxml codec.
glam = "0.29"           # Used for math vec types.
indexmap = "2.6"        # Used for res filesystem and network.
tracing = "0.1"         # Used possibly everywhere

# Used for codecs read/writing.
serde = "1.0"
serde-pickle.workspace = true
# serde-pickle = "1.1"
bitflags = "2.6"

# The following dependencies are used for network sub module.
crossbeam-channel = "0.5"
crypto-common = "0.1"
blowfish = "0.9"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
rsa = "0.8"

[features]
default = []

[lib]
name = "wgtk"
